added bootstrap navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <p class="alert"><%= alert %></p>
-    
+    <%= render "partials/navbar" %>
     <%= yield %>
   </body>
 </html>
