added jumbotron formatting

--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,2 +1,14 @@
-<h1>Home#page</h1>
-<p>Find me in app/views/home/page.html.erb</p>
+<div class="jumbotron"
+    <div class="row">
+        <div class="col-md-6">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </div>
+
+        <div class="col-md-6">
+        <%= image_tag "food-1" %>
+        </div>
+    </div>
+</div>
