--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   </head>
 
   <body>
+  <div class="container">
     <p class="alert"><%= alert %></p>
     <%= render "partials/navbar" %>
     <%= yield %>
   </body>
+  </div>
 </html>
