--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,14 +1,13 @@
 <div class="jumbotron"
     <div class="row">
-        <div class="col-md-6">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <div class="col-md-5">
+            <h1 class="display-4">Cafe App</h1>
+            <p class="lead">Practicing Rails and Bootstrap</p>
+            <hr class="my-4">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Add to Menu</a>
         </div>
-
-        <div class="col-md-6">
-        <%= image_tag "food-1" %>
+        <div class="col-md-5">
+        <%= image_tag "food-1", class: "home-image" %>
         </div>
     </div>
 </div>
