--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -4,7 +4,7 @@
             <h1 class="display-4">Cafe App</h1>
             <p class="lead">Practicing Rails and Bootstrap</p>
             <hr class="my-4">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Add to Menu</a>
+            <%= link_to "Add to Menu", new_menu_path, class:"btn btn-primary btn-lg"%>
         </div>
         <div class="col-md-5">
         <%= image_tag "food-1", class: "home-image" %>
