--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -27,7 +27,10 @@
 
 <p>
   <strong>User:</strong>
-  <%= @menu.user_id %>
+  <%= @menu.user.email %>
+</p>
+<p>
+  <%=image_tag @menu.picture%>
 </p>
 
 <%= link_to 'Edit', edit_menu_path(@menu) %> |
