added card layout fo menu items

--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -5,6 +5,7 @@
             <p class="lead">Practicing Rails and Bootstrap</p>
             <hr class="my-4">
             <%= link_to "Add to Menu", new_menu_path, class:"btn btn-primary btn-lg"%>
+            <%= link_to "View Menu", item_page_path, class:"btn btn-primary btn-lg"%>
         </div>
         <div class="col-md-5">
         <%= image_tag "food-1", class: "home-image" %>
