--- a/app/views/item/page.html.erb
+++ b/app/views/item/page.html.erb
@@ -1,11 +1,15 @@
-<%= @menus.each do |menu|%>
-    <div class="card" style="width: 18rem;">
-    <%= image_tag menu.picture, class:"card-img-top"%>
-    <div class="card-body">
-        <h5 class="card-title"><%=menu.name%></h5>
-        <p class="card-text"><%=menu.description%></p>
-        <p class="card-text">$<%=menu.price%>
-        <%= link_to "Show more", menu_path(menu.id), class:"btn btn-primary btn-right" %></p>
-    </div>
-    </div>
-<% end %>
+<div class="row">
+    <%= @menus.each do |menu|%>
+        <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+            <%= image_tag menu.picture, class:"card-img-top"%>
+            <div class="card-body">
+                <h5 class="card-title"><%=menu.name%></h5>
+                <p class="card-text menu-description"><%=menu.description%></p>
+                <p class="card-text">$<%=menu.price%>
+                <%= link_to "Show more", menu_path(menu.id), class:"btn btn-primary btn-right" %></p>
+            </div>
+            </div>
+        </div>
+    <% end %>
+</div>
